# MyTColor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.py  pyproject.toml  setup.py
MyTColor/: __init__.py  __main__.py  colors.py  utils.py
tests/: test_basic.py
